--- a/src/content/docs/book/part-1-instructions/2-data/3-guided-tour/01-05-wrap-up.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/3-guided-tour/01-05-wrap-up.mdx
@@ -5,11 +5,18 @@ sidebar:
 ---
 import { Accordion, AccordionItem } from 'accessible-astro-components'
 
-You now have seen how to work with values in the terminal. Have a go at finishing off this program now. The remaining output needs you to get the distance remaining, to show the time remaining in the trip, the total distance covered, and the total time taken.
+You have now seen how to work with values in the terminal.
+Next, have a go at finishing off this program.
+The remaining output needs you to
+
+* Get the distance remaining in the trip from the user.
+* Calculate and show the time remaining in the trip.
+* Calculate and show the total distance covered in the trip.
+* Calculate and show the total time the trip has taken.
 
 :::tip
 
-Do this in steps! First get the remaining distance and time to destination, then add the final calculations.
+Do this in steps! Just like in the previous steps, do a small part, compile and run to make sure it works, then repeat until you are done.
 
 :::
 
@@ -70,11 +77,11 @@ Do this in steps! First get the remaining distance and time to destination, then
       </AccordionItem>
     </Accordion>
 
-Make sure to test your program and make sure that the values output are correct.
+Make sure to test your program and make sure that the values it outputs are correct.
 
 :::note
 
-Building this all in steps is **very** important! There is lots going on in the code, so at the start you don't want to plan too far ahead. As you gain more practice and experience you can then start to design larger parts of the code, but you still end up coding it a little at a time and adjusting your plans as you go.
+Building this all in steps is **very** important! There is lots going on in the code, so at the start you don't want to plan too far ahead. As you gain more practice and experience you can then start to design and implement larger parts of the code at once, but you still end up coding it a little at a time and adjusting your plans as you go.
 
 :::
 
