--- a/src/content/docs/book/part-1-instructions/2-data/3-guided-tour/01-04-speed.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/3-guided-tour/01-04-speed.mdx
@@ -7,6 +7,7 @@ import { Accordion, AccordionItem } from 'accessible-astro-components'
 import { Steps } from '@astrojs/starlight/components';
 
 Next, let's calculate the current average speed.
+After this step, the program output should look similar to this:
 
 ```txt {7-8}
 What is your name: Andrew
@@ -20,22 +21,23 @@ Your average speed is 44.57142857142857 km/h
 ```
 
 <Steps>
-1. New variables and constants?
+1. Declare new variables and constants.
 
-    We will need to store the speed. We can calculate this as `distance` divided by, `time` divided by 60. Where 60 represents minutes per hour.
-
-    We can track the speed by adding a `speed` variable, but we should also add a `MINUTES_PER_HOUR` constant to make this meaningful in our code.
+    We will need to store the current speed, which can be calculated as distance, divided by time, divided by 60 (60 represents minutes per hour).
+    To do this we need a new `speed` variable.
+    We should also add a `MINUTES_PER_HOUR` constant.
+    This will help us avoid hard-coding the value 60 directly into our calculation, and give meaning to the value.
 
 2. Add the code to calculate the speed and output the speed.
 
     :::tip
-    Code `MINUTES_PER_HOUR` above the other variables. It is good to keep constants and variables together. Remember to watch the case you use: `snake_case` for variables, and `UPPER_CASE` for constants. This helps keep our code clear.
+    Place the declaration for `MINUTES_PER_HOUR` **above** the other variable declarations. It is good to keep constants and variables together, and the contention is to put constants first. Remember to watch the case you use: `snake_case` for variables, and `UPPER_CASE` for constants. This helps keep our code clear.
     :::
 
     <Accordion>
-      <AccordionItem header="Calculating speed">
+      <AccordionItem header="Declaring new variables and constants, and calculating speed">
 
-    ```c++ {3-4,28-32}
+    ```c++ {3-4,10,28-32}
     #include "splashkit.h"
 
     const int MINUTES_PER_HOUR = 60;
@@ -72,14 +74,15 @@ Your average speed is 44.57142857142857 km/h
     ```
 
     :::tip[Want to format the double to show only 2 decimal places?]
-    The `to_string` function accepts a precision argument used to perform this. Switch the last line of code to: `write_line("Your average speed is " + to_string(speed, 2) + " km/h");`
+    The `to_string` function from SplashKit accepts a precision argument you can use to do this.
+    Try it out by switching the last line of code to: `write_line("Your average speed is " + to_string(speed, 2) + " km/h");`
     :::
 
 
       </AccordionItem>
     </Accordion>
 
-3. Compile and run your program. Check the output matches what we are after.
+3. Compile and run your program. Check the your output matches what we are after.
 
     :::note
 
