Progress arrays activity and fix pano from member functions

--- a/src/content/docs/book/part-2-organised-code/3-working-with-multiples/4-activities/3-1-database.mdx
+++ b/src/content/docs/book/part-2-organised-code/3-working-with-multiples/4-activities/3-1-database.mdx
@@ -2,6 +2,7 @@
 title: Product Database
 sidebar:
     label: " - Product Database"
+draft: true
 ---
 import NoCopy from '/src/components/NoCopy.astro'
 
