Edit pass C3 activities

--- a/src/content/docs/book/part-1-instructions/2-data/4-activities/3-calculator.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/4-activities/3-calculator.mdx
@@ -1,7 +1,7 @@
 ---
-title: Calculator
+title: Savings Calculator
 sidebar:
-    label: " - Calculator"
+    label: " - Savings Calculator"
 ---
 import NoCopy from '/src/components/NoCopy.astro'
 
@@ -20,9 +20,9 @@ For the Holiday, you need to save 257 dollars a week
 Based on current savings you will need 51.4 weeks to save $2572
 ```
 
-Or build a similar terminal based program of your own design. It will need to:
+Or, build a similar terminal-based program of your own design. It will need to:
 
-- read text and numeric data from the user - at least three values.
+- read text and numeric data from the user -- at least three values.
 - perform a calculation involving multiple steps, with outputs shown at each step
 - output the results
 </NoCopy>
