--- a/src/content/docs/book/part-1-instructions/2-data/4-activities/4-media-player.mdx
+++ b/src/content/docs/book/part-1-instructions/2-data/4-activities/4-media-player.mdx
@@ -10,7 +10,7 @@ Make sure to read about [playing music in SplashKit](/book/part-1-instructions/1
 :::
 <NoCopy>
 
-We can use sequence and data to play around with the sound playing features of SplashKit. This program will ask the user to enter the path to a sound effect to play, how long to play it for, an initial volume and a final volume. This will then output messages saying what it is doing, while it plays the music.
+We can use sequence and data to play around with the sound playing features of SplashKit. This program will ask the user to enter the path to a sound effect to play, how long to play it for, an initial volume, and a final volume. It should then output messages saying what it is doing, while it plays the music.
 
 ```txt
 Welcome to the music play test
